test/Fail/MultipleEllipses.agda
-- Andreas, 2024-10-12, trigger error Syntax.MultipleEllipses

f : Set
f with Set
... | ... = Set

-- error: [Syntax.MultipleEllipses]
-- Multiple ellipses in left-hand side ... | ...
