test/Fail/MultipleEllipses.err
MultipleEllipses.agda:5.1-10: error: [Syntax.MultipleEllipses]
Multiple ellipses in left-hand side ... | ...
